--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
    <version>2.8.1</version>
    <executions>
       <execution>
-         <id>deploy</id>
+         <id>default-deploy</id>
          <phase>deploy</phase>
          <goals>
             <goal>deploy</goal>
