--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
       </executions>
     </plugin>
 	  <plugin>
+   <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-deploy-plugin</artifactId>
    <version>2.8.1</version>
    <executions>
@@ -53,12 +54,6 @@
       </execution>
    </executions>
 </plugin>
-	 <plugin>
-   <groupId>org.apache.maven.plugins</groupId>
-   <artifactId>maven-deploy-plugin</artifactId>
-   <version>2.8.2</version>
-  
-</plugin>
   </plugins>
  </build>
   
@@ -66,7 +61,7 @@
 	<repository>
 		<id>deploymentRepo</id>
 		<name>Internal Releases</name>
-		<url>http://13.59.19.121:8081/repository/maven-releases/</url>
+		<url>http://13.59.19.121:8081//maven-releases/</url>
 	</repository>
  
 	<snapshotRepository>
