--- a/pom.xml
+++ b/pom.xml
@@ -61,13 +61,13 @@
 	<repository>
 		<id>deploymentRepo</id>
 		<name>Internal Releases</name>
-		<url>http://13.59.19.121:8081//maven-releases/</url>
+		<url>http://ec2-13-58-7-247.us-east-2.compute.amazonaws.com:8081/repository/maven-releases/</url>
 	</repository>
  
 	<snapshotRepository>
 		<id>deploymentRepo</id>
 		<name>Internal Releases</name>
-		<url>http://13.59.19.121:8081/repository/maven-snapshots/</url>
+		<url>http://ec2-13-58-7-247.us-east-2.compute.amazonaws.com:8081/repository/maven-snapshots/</url>
 	</snapshotRepository>
 
 </distributionManagement>
