--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
   
   <distributionManagement>
 	<repository>
-		<id>deploymentRepo</id>
+		<id>maven-releases</id>
 		<name>Internal Releases</name>
 		<url>http://ec2-18-222-133-2.us-east-2.compute.amazonaws.com:8081/#browse/browse/components:maven-releases</url>
 	</repository>
